--- a/datastructure-and-algorithms-made-easy-for-java/build.gradle
+++ b/datastructure-and-algorithms-made-easy-for-java/build.gradle
@@ -6,4 +6,5 @@ repositories {
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.13'
     testCompile 'junit:junit:4.12'
+    testCompile 'org.assertj:assertj-core:2.3.0'
 }
