--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include 'services:webservice'
 rootProject.name = 'research-java7'
 include 'java-7-new-features-cook-book'
 include 'datastructure-and-algorithms-made-easy-for-java'
+include 'java-concurrency'
