prepare java-concurrency-in-practice

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ rootProject.name = 'research-java7'
 include 'java-7-new-features-cook-book'
 include 'datastructure-and-algorithms-made-easy-for-java'
 include 'java-concurrency'
+include 'java-concurrency-in-practice'
