--- a/java-concurrency-in-practice/build.gradle
+++ b/java-concurrency-in-practice/build.gradle
@@ -1,1 +1,5 @@
+// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
+dependencies {
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+}
 
